--- a/styleguide/source/assets/scss/05-pages/_news.scss
+++ b/styleguide/source/assets/scss/05-pages/_news.scss
@@ -9,24 +9,34 @@
 
 .ama__news-article {
   //give the content column of the news article a tob border
-  .ama__layout--two-column--right__page-content {
-    &.border {
-      border-top: none;
-      padding-top: 10px;
-      margin-top: 0;
-      @include breakpoint($bp-small) {
-        border-top: 8px solid $purple;
-        padding-top: $gutter;
-        margin-top: $gutter
+  .ama__layout--two-column--right {
+    &__sidebar--secondary {
+      padding-top:0;
+    }
+    &__page-content {
+      padding-top: 0;
+      &.border {
+        border-top: none;
+        padding-top: 10px;
+        margin-top: 0;
+        @include breakpoint($bp-small) {
+          border-top: 8px solid $purple;
+        }
+      }
+      &.border-none {
+        padding-top: 0;
+        border-top: none;
       }
     }
-    &.border-none {
-      padding-top: none;
-      border-top: 0;
-    }
   }
-  &__sidebar--secondary {
-    padding-top:0;
+
+  .ama__inline-bio {
+    margin-bottom: $gutter * .75;
+    padding-bottom: 0;
+    @include breakpoint($bp-small) {
+      margin-bottom: $gutter / 2;
+      padding-bottom: 10.5px;
+    }
   }
 }
 
